# hanlp-demo

./: .gitignore  Dockerfile  Dockerfile_pip  download_models.py  makefile  pyproject.toml
src/: hanlp_util.py  server.py  split_sentence.py  test_client.py  test_split_sentence.py  test_split_sentence_with_index.py
src/analysis/: analysis.py  models.py  test_analysis.py  test_models.py
