[project]
name = "hanlp2-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "hanlp>=2.1.0",
    "hanlp-restful>=0.0.24",
    "setuptools>=75.8.0",
    "uvicorn>=0.34.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
